syntax = "proto3";

package pb;

option go_package = "github.com/Royal17x/go-url-shortener/internal/pb/;pb";


service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Shorten(ShortenRequest) returns (ShortenResponse);
}

message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message RegisterResponse {
    string userID = 1;
}

message LoginRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message LoginResponse {
    string token = 1;
}

message ShortenRequest {
    string token = 1;
    string url = 2;
}

message ShortenResponse {
    string short_url = 1;
}