syntax = "proto3";

package pb;

option go_package = "github.com/Royal17x/go-url-shortener/internal/pb/;pb";

service URLService {
    rpc ShortenURL(ShortenURLRequest) returns (ShortenURLResponse);
    rpc ResolveURL(ResolveURLRequest) returns (ResolveURLResponse);
}

message ShortenURLRequest {
    string original_url = 1;
    int32 user_id = 2;
}

message ShortenURLResponse {
    string short_code = 1;
}

message ResolveURLRequest {
    string short_code = 1;
}

message ResolveURLResponse {
    string original_url = 1;
} 